--- a/souls/game.css
+++ b/souls/game.css
@@ -15,7 +15,7 @@ label {
 }
 .container{
     width: 100%;
-    height: 65%;
+    height: 65%;    
 }
 
 #commandPrompt{
@@ -48,4 +48,21 @@ label {
     color: #fff;
     font-family: "Garamond", Times, serif;
     font-size: 20px;
+}
+.label{
+    position:absolute;
+    padding-right: 3px;
+    width: 80%;
+    padding: 5px;
+    background-color: transparent;
+    border: none;
+    outline: none;
+    color: #fff;
+    font-family: "Garamond", Times, serif;
+    font-size: 20px;
+}
+.output
+{
+    padding-left: 20px;
+    font-size: 17px;
 }
