Integrating rayannes character customization + turn options

--- a/_layouts/souls.html
+++ b/_layouts/souls.html
@@ -26,7 +26,7 @@
    ╚═╝   ╚══════╝╚═╝  ╚═╝╚═╝     ╚═╝╚═╝╚═╝  ╚═══╝╚═╝  ╚═╝╚══════╝    ╚══════╝ ╚═════╝  ╚═════╝ ╚══════╝╚══════╝
         </pre>
         <div>
-            <button class="button" onclick="window.location.href = '/ramjiJarmi/souls/game.html'">
+            <button class="button" onclick="window.location.href = '/ramjiJarmi/souls/chrctrCustom.html'">
                 New Game
             </button>
         </div>
