--- a/souls/game.css
+++ b/souls/game.css
@@ -1,7 +1,6 @@
 body {
     background-color: black;
     animation: fadeIn 3s;
-    /* overflow-x: hidden; */
 }
 label {
     text-align: left;
@@ -10,17 +9,23 @@ label {
     margin-left:2px;
 }
 .dashed-divider {
+    position:relative;
     border: 3px dashed #fff;
-    margin: auto;
+    margin-top: 10px;
     width: 100%;
 }
 .container{
     width: 100%;
     height: 65%;    
 }
+.estusMan{
+    position:absolute;
+    bottom:260px;
+    left:390px;
+}
 #commandPrompt{
     width: 100%;
-    position:relative;
+    position:sticky;
     padding-top: 10px;
     background-color: #000;
     color: #fff;
