--- a/souls/css/combat.css
+++ b/souls/css/combat.css
@@ -1,7 +1,15 @@
 body {
     background-color: black;
-    /* overflow-x: hidden; */
+    overflow-x: hidden;
+    overflow-y:hidden;
 }
+#charImg{
+    position:absolute;
+    left:0;
+    padding:5px;
+    padding-left: 20px;
+}
+
 .container{
     width: 100%;
     height: 65%;    
@@ -17,6 +25,12 @@ body {
 }
 #bossImg{
     filter: none;
+    animation: slideTop 1s, shake 1s ease-in-out 1s;
+
+}
+.bossDamage{
+    /* filter: hue-rotate(80deg)!important; */
+    filter: contrast(120%) brightness(100%) saturate(100%) sepia(100%) saturate(500%)!important;
 }
 .button {
     background-color: transparent;
@@ -29,4 +43,47 @@ body {
 .button:hover{
     width: 325px;
     background-color: #460000;
+}
+#chat
+{
+    color:white;
+    font-family: "Garamond", Times, serif;
+    position: absolute;
+    left: 20px;
+    margin-top: 10px;
+}
+.newMessage{
+    animation: highlightImage 0.5s;
+}
+#stats{
+    color: white;
+    font-family: "Garamond", Times, serif;
+    position: relative;
+    padding: 10px;
+    left: 0;
+}
+@keyframes slideTop{
+    from{margin-top: -100%;}
+    to {margin-top: 0%;}
+}
+
+@keyframes shake {
+    0% { transform: translate(0, 0); }
+    10% { transform: translate(-5px, -5px); }
+    20% { transform: translate(5px, 5px); }
+    30% { transform: translate(-5px, -5px); }
+    40% { transform: translate(5px, 5px); }
+    50% { transform: translate(-5px, -5px); }
+    60% { transform: translate(5px, 5px); }
+    70% { transform: translate(-5px, -5px); }
+    80% { transform: translate(5px, 5px); }
+    90% { transform: translate(-5px, -5px); }
+    100% { transform: translate(0, 0); }
+}
+@keyframes highlightImage {
+    0% {transform: scale(1);}
+    50% {transform: scale(1.05);}
+    100% {transform: scale(1);}
+    from {color: #460000;}
+    to {color: white;}
 }
