backend of customization and game leaderboard is completed

--- a/souls/game.css
+++ b/souls/game.css
@@ -30,6 +30,7 @@ label {
     padding-top: 10px;
     background-color: #000;
     color: #fff;
+    padding-left:22px;
 }
 .commandInput{
     width: 80%;
