--- a/souls/game.css
+++ b/souls/game.css
@@ -1,7 +1,7 @@
 body {
     background-color: black;
     animation: fadeIn 3s;
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
 }
 label {
     text-align: left;
